# fastapi-uv

./: .dockerignore  .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .teller.yml  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE  README.md  alpine.dockerfile  dagger.json  devbox.json  mkdocs.yml  pyproject.toml  slim.dockerfile  ubuntu.dockerfile
.devcontainer/: devcontainer.json
.gitea/workflows/: build-push.yml  build.yaml  dagger.yml  test-and-build.yaml  test-build-push.yaml  test-build-push.yml  test.yaml
.github/workflows/: build.yaml  dagger.yml  main.yml  on-release-main.yml  test-and-build.yaml  test-build-push.yaml  validate-codecov-config.yml
.gitlab-ci/: dagger.yml  gitlab.yml
_.gitea/workflows/: build.yaml
dagger/: pyproject.toml
dagger/src/main/: __init__.py
docs/: index.md  modules.md
gitlab-ci/: dagger.yml  gitlab.yml
scripts/: update_version.py
src/fastapi_uv/: main.py
tests/: test_foo.py  test_hello_world.py  test_main.py
