[project]
name = "fastapi-uv"
version = "0.3.3+53.ga28e"
description = "This is a template repository for Python projects that use uv for their dependency management."
authors = [
    { name = "AC", email = "ac@kubernetista.io" },
]
keywords = [
    "python",
]
requires-python = ">=3.11,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi[standard]>=0.115.3",
    "pyproject-metadata>=0.9.0",
    "tomli>=2.0.2",
    "uvicorn>=0.31.1",
]

[project.urls]
Homepage = "https://acola.github.io/fastapi-uv/"
Repository = "https://github.com/acola/fastapi-uv"
Documentation = "https://acola.github.io/fastapi-uv/"

[tool.uv]
dev-dependencies = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.20.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.9",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "pyright>=1.1.386",
]
cache-keys = [
    { file = "pyproject.toml" },
    { git = { commit = true, tags = true } },
]
cache-dir = ".cache"

[tool.mypy]
files = [
    "src/fastapi_uv",
]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E",
    "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
]
ignore = [
    "E501",
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = [
    "fastapi_uv",
]

[tool.hatch.envs.default]
installer = "uv"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
